Добавил mongo. Добавил сервис обновления

--- a/project/composer.json
+++ b/project/composer.json
@@ -3,6 +3,7 @@
         "silex/silex": "~2.0",
         "symfony/twig-bridge": "^3.3",
         "monolog/monolog": "^1.22",
-        "swiftmailer/swiftmailer": "^6.0"
+        "swiftmailer/swiftmailer": "^6.0",
+        "lalbert/silex-mongodb": "^1.0"
     }
 }
