--- a/vagrant-vm/Vagrantfile
+++ b/vagrant-vm/Vagrantfile
@@ -17,7 +17,7 @@ Vagrant.configure(2) do |config|
   end
 
   config.vm.provider "virtualbox" do |v|
-    v.name = "quickengine_vm"
+    v.name = "atmosfera_vm"
   end
 
 end
