Заготовка для подключения machine

--- a/project/vm/vhosts/project.conf
+++ b/project/vm/vhosts/project.conf
@@ -4,16 +4,16 @@
 <VirtualHost *:80>
 
 	ServerAdmin webmaster@localhost
-	ServerName qe.dev
+	ServerName project.dev
 
-	DocumentRoot /project/web
+	DocumentRoot /var/www/html/project/web
 
 	<Directory />
 		Options FollowSymLinks
 		AllowOverride None
 	</Directory>
 
-	<Directory /project/web>
+	<Directory /var/www/html/project/web>
 
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride None
@@ -33,12 +33,12 @@
 
     </Directory>
 
-	ErrorLog /var/log/project/error.log
+	ErrorLog /var/log/project_error.log
 
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
 	LogLevel warn
 
-	CustomLog /var/log/project/access.log combined
+	CustomLog /var/log/apache2/project_access.log combined
 
 </VirtualHost>
