--- a/vm/vhosts/project.conf
+++ b/vm/vhosts/project.conf
@@ -4,16 +4,16 @@
 <VirtualHost *:80>
 
 	ServerAdmin webmaster@localhost
-	ServerName project.dev
+	ServerName {projectname}.dev
 
-	DocumentRoot /var/www/html/project/web
+	DocumentRoot /var/www/html/{projectname}/web
 
 	<Directory />
 		Options FollowSymLinks
 		AllowOverride None
 	</Directory>
 
-	<Directory /var/www/html/project/web>
+	<Directory /var/www/html/{projectname}/web>
 
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride None
@@ -33,12 +33,12 @@
 
     </Directory>
 
-	ErrorLog /var/log/project_error.log
+	ErrorLog /var/log/{projectname}_error.log
 
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
 	LogLevel warn
 
-	CustomLog /var/log/apache2/project_access.log combined
+	CustomLog /var/log/apache2/{projectname}_access.log combined
 
 </VirtualHost>
