--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.provision "shell", path: "vagrant.install.sh"
 
-  config.vm.synced_folder "../", "/var/www/html/project"
+  config.vm.synced_folder "../", "/var/www/html/perfectclick"
   config.vm.synced_folder "../../machine/install", "/install"
 
   config.vm.network "private_network", ip: "192.168.20.20"
