--- a/vm/vhosts/project.conf
+++ b/vm/vhosts/project.conf
@@ -4,7 +4,8 @@
 <VirtualHost *:80>
 
 	ServerAdmin webmaster@localhost
-	ServerName {projectname}.dev
+	ServerName {projectname}
+	ServerAlias {projectname}.qe
 
 	DocumentRoot /var/www/html/{projectname}/web
 
@@ -33,7 +34,7 @@
 
     </Directory>
 
-	ErrorLog /var/log/{projectname}_error.log
+	ErrorLog /var/log/apache2/{projectname}_error.log
 
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
