--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "symfony/twig-bridge": "^3.3",
         "monolog/monolog": "^1.22",
         "swiftmailer/swiftmailer": "^6.0",
-        "lalbert/silex-mongodb": "^1.0"
+        "lalbert/silex-mongodb": "^1.0",
+        "symfony/yaml": "^4.0"
     }
 }
