Ajust uploaded image

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "monolog/monolog": "^1.22",
         "swiftmailer/swiftmailer": "^6.0",
         "lalbert/silex-mongodb": "^1.0",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "sybio/image-workshop": "^2.0"
     }
 }
