added some additional information

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,19 @@
 {
     "name": "shurupov/qengine",
+    "type": "project",
     "description": "Simple CMS",
+    "keywords": ["cms", "engine"],
+    "homepage": "https://github.com/shurupov/qengine",
     "version": "0.1",
+    "license": "GNU",
+    "authors": [
+      {
+        "name": "Evgeny Shurupov",
+        "email": "bolteg86@ya.ru",
+        "homepage": "https://vk.com/shurupov",
+        "role": "developer"
+      }
+    ],
     "require": {
         "silex/silex": "~2.0",
         "symfony/twig-bridge": "^3.3",
