--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["cms", "engine"],
     "homepage": "https://github.com/shurupov/qengine",
     "version": "0.1",
-    "license": "GNU",
+    "license": "MIT",
     "authors": [
       {
         "name": "Evgeny Shurupov",
